@@ -1,3 +1,7 @@
+2016-10-05  Pierre-Marie de Rodat  <derodat@adacore.com>
+
+	* gnat.dg/debug7.adb, gnat.dg/debug7.ads: New testcase.
+
 2016-10-05  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/55152
